--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
                             <li><img src="assets/intro/intro10.jpg" alt="소개10"></li>
                             <li><img src="assets/intro/intro11.jpg" alt="소개11"></li>
                             <li><img src="assets/intro/intro12.jpg" alt="소개12"></li>
+                            <li><img src="assets/intro/intro13.jpg" alt="소개13"></li>
                         </ul>
                     </div>
                 </div>
