--- a/quiz/quiz03.html
+++ b/quiz/quiz03.html
@@ -23,6 +23,7 @@
                 <li><a href="quiz04.html">4</a></li>
                 <li><a href="quiz05.html">5</a></li>
                 <li><a href="quiz06.html">6</a></li>
+                <li><a href="quiztest.html">검정고시기출</a></li>
             </ul>
         </nav>
     </header>
@@ -55,8 +56,8 @@
                         </label>
 
                     </div>
-                    <div class="answer "></div>
-                    <div class="desc "></div>
+                    <div class="answer none "></div>
+                    <div class="desc none"></div>
                 </div>
                 <div class="quiz__footer">
                     <button class="confirm">정답 확인하기</button>
@@ -77,12 +78,12 @@
         // 선택자
         const quizWrap = document.querySelector(".quiz__wrap");
         const quizHeader = quizWrap.querySelector(".quiz__header");
-        const quizNum = quizWrap.querySelector(".quiz__main .question");
         const quizQuestion = quizWrap.querySelector(".quiz__main .question");
-        const quizChoices = quizWrap.querySelector(".quiz__main .choices");
         const quizAnswer = quizWrap.querySelector(".quiz__main .answer");
         const quizDesc = quizWrap.querySelector(".quiz__main .desc");
         const quizConfirm = quizWrap.querySelector(".quiz__footer .confirm");
+        const quizChoices = quizWrap.querySelectorAll(".quiz__main .choices span");
+        const quizSelects = quizWrap.querySelectorAll(".quiz__main .choices input");
 
         // 문제 정보
         const quizInfo = {
@@ -91,13 +92,53 @@
             num: "01",
             question: "명령어 형식(instruction format)에서 첫 번째 바이트에 기억되는 것은?",
             choices: ["operand", "length", "question mark", "opcode"],
-            answer: "opcode",
+            answer: "4",
             desc: "명령어의 구성명령어 코드부 + 주소부 (한글),<br> OP-code + Operand (영문)"
         }
 
         // 문제 출력
         quizHeader.innerHTML = quizInfo.date + " " + quizInfo.type;
-        quizQuestion.innerHTML = quizInfo.num + " " + quizInfo.question;
+        quizQuestion.innerHTML = quizInfo.num + "." + quizInfo.question;
+        quizAnswer.innerHTML = quizInfo.awswer;
+        quizDesc.innerHTML = quizInfo.desc;
+        //quizChoices[0].innerHTML = quizInfo.choices[0]
+        //quizChoices[1].innerHTML = quizInfo.choices[1]
+        //quizChoices[2].innerHTML = quizInfo.choices[2]
+        //quizChoices[3].innerHTML = quizInfo.choices[3]
+        for (let i = 0; i < quizChoices.length; i++) {
+            quizChoices[i].innerHTML = quizInfo.choices[i]
+            quizChoices[i].innerHTML = quizInfo.choices[i]
+            quizChoices[i].innerHTML = quizInfo.choices[i]
+            quizChoices[i].innerHTML = quizInfo.choices[i]
+        }
+
+        // 정답 확인하기
+        quizConfirm.addEventListener("click", () => {
+            let selectedChoice = null;
+            //보기 선택
+            for (let i = 0; i < quizSelects.length; i++) {
+                if (quizSelects[i].checked) {
+                    selectedChoice = quizSelects[i].value;
+                    break;
+                }
+            }
+
+            //정답 확인
+
+            if (selectedChoice !== null) {
+                if (selectedChoice == quizInfo.answer) {
+                    alert("정답입니다.")
+
+                    quizDesc.classList.remove("none")
+                } else {
+                    alert("오답입니다")
+                    quizAnswer.classList.remove("none")
+                    quizDesc.classList.remove("none")
+                }
+            } else {
+                alert("보기를 선택해주세요");
+            }
+        });
     </script>
 </body>
 
