--- a/mysql/mysql06.html
+++ b/mysql/mysql06.html
@@ -37,42 +37,34 @@
                 <div class="info">
                     ALTER TABLE [테이블 이름] ADD [추가할 필드명] AFTER [필드 위치]
                 </div>
-                <pre><code class="language-js">
-ALTER TABLE members ADD youPhone varchar(20) NOT NULL;
+                <pre><code class="language-js">ALTER TABLE members ADD youPhone varchar(20) NOT NULL;
 Query OK, 0 rows affected (0.08 sec)
-Records: 0  Duplicates: 0  Warnings: 0
-                </code></pre>
+Records: 0  Duplicates: 0  Warnings: 0</code></pre>
 
                 <h4>멤버 테이블에 주소를 생일 뒤에 추가</h4>
-                <pre><code class="language-js">
-ALTER TABLE members ADD youAddress varchar(100) NOT NULL AFTER youBirth;
+                <pre><code class="language-js">ALTER TABLE members ADD youAddress varchar(100) NOT NULL AFTER youBirth;
 Query OK, 0 rows affected (0.07 sec)
-Records: 0  Duplicates: 0  Warnings: 0
-                </code></pre>
+Records: 0  Duplicates: 0  Warnings: 0</code></pre>
                 <h4>필드 수정하기</h4>
                 <div class="info">
                     ALTER TABLE [테이블 이름] MODIFY [수정할 필드명]
                 </div>
 
                 <h4>핸드폰 필드 유형 수정하기</h4>
-                <pre><code class="language-js">
-ALTER TABLE members MODIFY youPhone int(20) NOT NULL;
+                <pre><code class="language-js">ALTER TABLE members MODIFY youPhone int(20) NOT NULL;
 Query OK, 0 rows affected (0.03 sec)
-Records: 0  Duplicates: 0  Warnings: 0
-                </code></pre>
+Records: 0  Duplicates: 0  Warnings: 0</code></pre>
                 <h4>필드 삭제하기</h4>
                 <div class="info">
                     ALTER TABLE [테이블 이름] DROP [수정할 필드명]
                 </div>
-                <pre><code class="language-js">
-ALTER TABLE members DROP youPhone;
+                <pre><code class="language-js">ALTER TABLE members DROP youPhone;
 Query OK, 0 rows affected (0.03 sec)
 Records: 0  Duplicates: 0  Warnings: 0
 
 ALTER TABLE members DROP youAddress;
 Query OK, 0 rows affected (0.03 sec)
-Records: 0  Duplicates: 0  Warnings: 0
-                </code></pre>
+Records: 0  Duplicates: 0  Warnings: 0</code></pre>
             </div>
         </div>
     </main>
