--- a/Javascript/javascript03.html
+++ b/Javascript/javascript03.html
@@ -326,7 +326,275 @@ console.log(func4("10.함수가 실행되었습니다."));</code></pre>
                     </details>
                 </div>
             </div>
-            <!-- //sample09 -->
+            <!-- //sample10 -->
+            <div id="sample11" class="sample">
+                <h3>11. 함수 유형 : 함수와 매개변수를 이용한 형태</h3>
+                <p>
+                    이 코드는 숫자와 문자열을 결합하여 두 가지 형태로 출력하는 함수를 정의하고 호출합니다. 함수는 숫자와 문자열을 인수로 받아들이고, 먼저 숫자와 문자열을 점으로 연결한 형태를
+                    콘솔에 출력한 다음, 템플릿 리터럴을 사용하여 숫자와 문자열을 띄어쓰기로 연결한 형태를 콘솔에 출력합니다.
+                </p>
+                <pre><code>{
+function func(num, str) {
+console.log(num + "." + str);
+console.log(`${num}. ${str}`);
+}
+func(11, "함수가 실행되었습니다.");
+}</code></pre>
+                <div class="result">
+                    <details>
+                        <summary>결과 확인하기</summary>
+                        <div>
+                            11. 함수가 실행되었습니다.
+                        </div>
+                    </details>
+                </div>
+            </div>
+            <!-- //sample11 -->
+            <div id="sample12" class="sample">
+                <h3>12. 함수 유형 : 함수와 변수를 이용한 형태</h3>
+                <p>
+                    이 코드는 변수와 함수를 조합하여 기능을 구현합니다. 먼저 상수로 정의된 숫자와 문자열을 함수의 매개변수로 전달하여, 템플릿 리터럴을 활용하여 숫자와 문자열을 결합하여 출력합니다.
+                </p>
+                <pre><code>{
+const num = 12;
+const str = "함수가 실행되었습니다.";
+
+function func(num, str) {
+console.log(`${num}. ${str}`);
+}
+func(num, str);
+}</code></pre>
+                <div class="result">
+                    <details>
+                        <summary>결과 확인하기</summary>
+                        <div>
+                            12. 함수가 실행되었습니다.
+                        </div>
+                    </details>
+                </div>
+            </div>
+            <!-- //sample12 -->
+            <div id="sample13" class="sample">
+                <h3>13. 함수 유형 : 함수와 배열을 이용한 형태</h3>
+                <p>
+                    이 코드는 배열과 함수를 결합하여 기능을 수행합니다. 먼저 숫자와 문자열을 담은 두 개의 배열을 정의하고, 해당 배열의 요소를 함수의 매개변수로 전달하여 템플릿 리터럴을 활용하여
+                    출력합니다.
+                </p>
+                <pre><code>{
+const num = [13, 14];
+const str = ["함수가 실행되었습니다.", "함수가 실행되었습니다."];
+
+function func(num, str) {
+console.log(`${num}. ${str}`);
+}
+func(num[0], str[0]);
+func(num[1], str[1]);
+}</code></pre>
+                <div class="result">
+                    <details>
+                        <summary>결과 확인하기</summary>
+                        <div>
+                            13. 함수가 실행되었습니다.
+                            14. 함수가 실행되었습니다.
+                        </div>
+                    </details>
+                </div>
+            </div>
+            <!-- //sample13 -->
+            <div id="sample14" class="sample">
+                <h3>14. 함수 유형 : 함수와 배열을 이용한 형태</h3>
+                <p>
+                    이 코드는 객체와 함수를 조합하여 기능을 구현합니다. 먼저 객체에 숫자와 문자열을 속성으로 가지고 있는 info를 정의하고, 해당 객체의 속성을 함수의 매개변수로 전달하여 템플릿
+                    리터럴을 사용하여 출력합니다.
+                </p>
+                <pre><code>{
+const info = {
+num: 15,
+str: "함수가 실행되었습니다."
+}
+function func(num, str) {
+console.log(`${num}. ${str}`);
+
+}
+func(info.num, info.str);
+}</code></pre>
+                <div class="result">
+                    <details>
+                        <summary>결과 확인하기</summary>
+                        <div>
+                            15. 함수가 실행되었습니다.
+                        </div>
+                    </details>
+                </div>
+            </div>
+            <!-- //sample14 -->
+            <div id="sample15" class="sample">
+                <h3>15. 함수 유형 : 함수와 객체 및 배열을 이용한 형태</h3>
+                <p>
+                    이 코드는 객체와 배열을 결합하여 기능을 수행합니다. 먼저 객체들을 담은 배열 info를 정의하고, 각 객체의 속성을 함수의 매개변수로 전달하여 템플릿 리터럴을 사용하여
+                    출력합니다.
+                </p>
+                <pre><code>{
+const info = [
+    { num: 16, str: "함수가 실행되었습니다." },
+    { num: 17, str: "함수가 실행되었습니다." },
+];
+
+function func(num, str) {
+    console.log(`${num}. ${str}`);
+}
+func(info[0].num, info[0].str);
+func(info[1].num, info[1].str);
+}</code></pre>
+                <div class="result">
+                    <details>
+                        <summary>결과 확인하기</summary>
+                        <div>
+                            16. 함수가 실행되었습니다.
+                            17. 함수가 실행되었습니다.
+                        </div>
+                    </details>
+                </div>
+            </div>
+            <!-- //sample15 -->
+            <div id="sample16" class="sample">
+                <h3>16. 함수 유형 : 객체 안에 함수를 이용한 형태</h3>
+                <p>
+                    이 코드는 객체 내부에 함수를 활용하여 기능을 구현합니다. info 객체 안에 result라는 함수가 정의되어 있습니다. 이 함수는 객체 내의 다른 속성인 num과 str을
+                    활용하여 템플릿 리터럴을 사용하여 결과를 출력합니다. 마지막으로, info 객체의 result 함수를 호출하여 결과를 출력합니다.
+                </p>
+                <pre><code>{
+const info = {
+num: 18,
+str: "함수가 실행되었습니다.",
+result: () => {
+console.log(`${info.num}. ${info.str}`);
+}
+}
+info.result();
+}</code></pre>
+                <div class="result">
+                    <details>
+                        <summary>결과 확인하기</summary>
+                        <div>
+                            18. 함수가 실행되었습니다.
+                        </div>
+                    </details>
+                </div>
+            </div>
+            <!-- //sample16 -->
+            <div id="sample17" class="sample">
+                <h3>17. 함수 유형 : 객체 생성자 함수</h3>
+                <p>
+                    이 코드는 객체 생성자 함수를 사용하여 객체를 생성하는 형태입니다. Func 함수는 인수로 받은 숫자와 문자열을 속성으로 갖는 객체를 생성합니다. result 함수는 객체 내의
+                    속성을 활용하여 결과를 출력합니다. 그리고 생성된 두 개의 객체를 각각 호출하여 결과를 출력합니다.
+                </p>
+                <pre><code>{
+//함수 정의
+function Func(num, str) {
+this.num = num;
+this.str = str;
+this.result = () => {
+console.log(`${this.num}. ${this.str}`);
+}
+}
+//인스턴스 생성
+const info1 = new Func(19, "함수가 실행되었습니다");
+const info2 = new Func(20, "함수가 실행되었습니다");
+
+// 호출
+info1.result();
+info2.result();
+}</code></pre>
+                <div class="result">
+                    <details>
+                        <summary>결과 확인하기</summary>
+                        <div>
+                            19. 함수가 실행되었습니다.
+                            20. 함수가 실행되었습니다.
+                        </div>
+                    </details>
+                </div>
+            </div>
+            <!-- //sample17 -->
+            <div id="sample18" class="sample">
+                <h3>18. 함수 유형 : 프로토타입 함수</h3>
+                <p>이 코드는 객체 생성자 함수를 정의한 후, 해당 함수의 프로토타입에 메서드를 추가하여 모든 인스턴스에서 해당 메서드를 공유합니다. 그리고 두 개의 객체를 생성하고 각각의 메서드를
+                    호출하여 결과를 출력합니다.
+                </p>
+                <pre><code> {
+// 함수 정의
+function Func(num, str) {
+this.num = num;
+this.str = str;
+}
+
+// 메서드 추가
+Func.prototype.result = function () {
+console.log(`${this.num}. ${this.str}`);
+}
+
+//인스턴스 생성
+const info1 = new Func(21, "함수가 실행되었습니다");
+const info2 = new Func(22, "함수가 실행되었습니다");
+
+// 호출
+info1.result();
+info2.result();
+}</code></pre>
+                <div class="result">
+                    <details>
+                        <summary>결과 확인하기</summary>
+                        <div>
+                            21. 함수가 실행되었습니다.
+                            22. 함수가 실행되었습니다.
+                        </div>
+                    </details>
+                </div>
+            </div>
+            <!-- //sample18 -->
+            <div id="sample19" class="sample">
+                <h3>19. 함수 유형 : 객체 리터럴 함수</h3>
+                <p>
+                    이 코드는 객체 리터럴 함수를 사용하여 메서드를 추가한 후, 두 개의 객체를 생성하여 해당 메서드를 호출하여 결과를 출력합니다. 객체 리터럴을 통해 Func.prototype에
+                    result1과 result2 메서드를 추가하여 각각의 객체에서 호출할 수 있게 합니다.
+                </p>
+                <pre><code>{
+// 함수 정의
+function Func(num, str) {
+this.num = num;
+this.str = str;
+}
+
+//메서드 추가
+Func.prototype = {
+result1: function () {
+console.log(`${this.num}. ${this.str}`);
+},
+result2: function () {
+console.log(`${this.num}. ${this.str}`);
+}
+}
+
+//인스턴스 생성
+const info1 = new Func(23, "함수가 실행되었습니다");
+const info2 = new Func(24, "함수가 실행되었습니다");
+
+// 호출
+info1.result1();
+info2.result2();
+}</code></pre>
+                <div class="result">
+                    <details>
+                        <summary>결과 확인하기</summary>
+                        <div>
+                            23. 함수가 실행되었습니다.
+                            24. 함수가 실행되었습니다.
+                        </div>
+                    </details>
+                </div>
+            </div>
+            <!-- //sample19 -->
         </div>
         <!-- //main__sample -->
     </main>
@@ -342,176 +610,193 @@ console.log(func4("10.함수가 실행되었습니다."));</code></pre>
     <script>
         //01. 함수 : 선언적 함수
         {
-            function func() {
-                console.log("~~~");
+            function test() {
+                console.log("01. 함수 : 선언적 함수");
+            } test();
+        }
+        //02. 함수 : 익명 함수
+        {
+            const test = function () {
+                console.log("02. 함수 : 익명 함수");
+            }; test()
+        }
+        //03. 함수 : 매개변수 함수
+        {
+            function test(str) {
+                console.log(str)
+            } test("03. 함수 : 매개변수 함수")
+        }
+        //04. 함수 : 리턴값 함수
+        {
+            function test() {
+                return "04. 함수 : 리턴값 함수"
+            } console.log(test())
+        }
+        //05. 함수 : 매개변수 + 리턴값 함수
+        {
+            function test(str) {
+                return str
+            } console.log("05. 함수 : 매개변수 + 리턴값 함수")
+        }
+        //06. 화살표 함수 : 선언적 함수
+        {
+            test = () => {
+                console.log("06. 화살표 함수 : 선언적 함수");
+            }; test()
+        }
+        //07. 화살표 함수 : 익명 함수
+        {
+            const test = () => {
+                console.log("07. 화살표 함수 : 익명 함수");
+            }; test()
+        }
+        //08. 화살표 함수 : 매개변수 함수
+        {
+            test = (str) => {
+                console.log(str)
+            }; test("08. 화살표 함수 : 매개변수 함수")
+        }
+        //09. 화살표 함수 : 리턴값 함수
+        {
+            test = () => {
+                return "09. 화살표 함수 : 리턴값 함수"
+            }; console.log(test())
+        }
+        //10. 화살표 함수 : 매개변수 + 리턴값 함수
+        {
+            test = (str) => {
+                return str
+            }; console.log("10. 화살표 함수 : 매개변수 + 리턴값 함수")
+        }
+        //11. 함수 유형 : 함수와 매개변수를 이용한 형태
+        {
+            function func(num, str) {
+                console.log(num + "." + str);
+                console.log(`${num}. ${str}`);
             }
-            func();
+            func(11, "함수가 실행되었습니다.");
         }
-
-        // 02. 함수 : 익명 함수
+        //12. 함수 유형 : 함수와 변수를 이용한 형태
         {
-            const func = function () {
-                console.log("~~~");
-            };
-            func();
-        }
+            const num = 12;
+            const str = "함수가 실행되었습니다.";
 
-        // 03. 함수 : 매개변수 함수
-        {
-            function func(str) {
-                console.log(str);
+            function func(num, str) {
+                console.log(`${num}. ${str}`);
             }
-            func("~~~");
+            func(num, str);
+        }
+        //13. 함수 유형 : 함수와 배열을 이용한 형태
+        {
+            const num = [13, 14];
+            const str = ["함수가 실행되었습니다.", "함수가 실행되었습니다."];
 
-            const func1 = function (str) {
-                console.log(str);
+            function func(num, str) {
+                console.log(`${num}. ${str}`);
             }
-            func1("~~~");
+            func(num[0], str[0]);
+            func(num[1], str[1]);
         }
-
-        // 04. 함수 : 리턴값 함수
+        //14. 함수 유형 : 함수와 객체을 이용한 형태
         {
-            function func() {
-                return "~~~"
+            const info = {
+                num: 15,
+                str: "함수가 실행되었습니다."
             }
-            console.log(func());
+            function func(num, str) {
+                console.log(`${num}. ${str}`);
 
-            const func1 = function () {
-                return "~~~"
             }
-            console.log(func1());
+            func(info.num, info.str);
         }
-
-        // 05. 함수 : 매개변수 + 리턴값 함수
+        //15. 함수 유형 : 함수와 객체 및 배열을 이용한 형태
         {
-            function func(str) {
-                return str;
+            const info = [
+                { num: 16, str: "함수가 실행되었습니다." },
+                { num: 17, str: "함수가 실행되었습니다." },
+            ];
+
+            function func(num, str) {
+                console.log(`${num}. ${str}`);
             }
-            console.log(func("~~~"));
-
-
-            const func1 = function (str) {
-                return str;
+            func(info[0].num, info[0].str);
+            func(info[1].num, info[1].str);
+        }
+        //16. 함수 유형 : 객체 안에 함수를 이용한 형태
+        {
+            const info = {
+                num: 18,
+                str: "함수가 실행되었습니다.",
+                result: () => {
+                    console.log(`${info.num}. ${info.str}`);
+                }
             }
-            console.log(func1("~~~"));
-
+            info.result();
         }
-
-        // 06. 화살표 함수 : 선언적 함수
+        //17. 함수 유형 : 객체 생성자 함수
         {
-            function func() {
-                console.log("~~~")
+            //함수 정의
+            function Func(num, str) {
+                this.num = num;
+                this.str = str;
+                this.result = () => {
+                    console.log(`${this.num}. ${this.str}`);
+                }
             }
-            func();
+            //인스턴스 생성
+            const info1 = new Func(19, "함수가 실행되었습니다");
+            const info2 = new Func(20, "함수가 실행되었습니다");
 
-            func = () => {
-                console.log("~~~")
+            // 호출
+            info1.result();
+            info2.result();
+        }
+        //18. 함수 유형 : 프로토타입 함수
+        {
+            // 함수 정의
+            function Func(num, str) {
+                this.num = num;
+                this.str = str;
             }
-            func();
 
-        }
-        // 07. 화살표 함수 : 익명 함수
-        {
-            const func = function () {
-                console.log("~~~")
-            };
-            func();
-
-            const func1 = () => {
-                console.log("~~~")
-            };
-            func1();
-        }
-        // 08. 화살표 함수 : 매개변수 함수
-        {
-            func = (str) => {
-                console.log(str);
+            // 메서드 추가
+            Func.prototype.result = function () {
+                console.log(`${this.num}. ${this.str}`);
             }
-            func("~~~");
 
+            //인스턴스 생성
+            const info1 = new Func(21, "함수가 실행되었습니다");
+            const info2 = new Func(22, "함수가 실행되었습니다");
 
-            const func1 = (str) => {
-                console.log(str);
+            // 호출
+            info1.result();
+            info2.result();
+        }
+        //19. 함수 유형 : 객체 리터럴 함수
+        {
+            // 함수 정의
+            function Func(num, str) {
+                this.num = num;
+                this.str = str;
             }
-            func1("~~~");
-        }
 
-        // 09. 화살표 함수 : 리턴값 함수
-        {
-
-            func = () => {
-                return "~~~"
+            //메서드 추가
+            Func.prototype = {
+                result1: function () {
+                    console.log(`${this.num}. ${this.str}`);
+                },
+                result2: function () {
+                    console.log(`${this.num}. ${this.str}`);
+                }
             }
-            console.log(func());
 
-            const func1 = () => {
-                return "~~~"
-            }
-            console.log(func1());
-        }
+            //인스턴스 생성
+            const info1 = new Func(23, "함수가 실행되었습니다");
+            const info2 = new Func(24, "함수가 실행되었습니다");
 
-        // 10. 화살표 함수 : 매개변수 + 리턴값 함수
-        {
-            const func = (str) => {
-                return str;
-            }
-            console.log(func("~~~"));
-
-            const func2 = str => {
-                return str;
-            }
-            console.log(func2("~~~"));
-
-            const func3 = str => str;
-            console.log(func3("~~~"));
-
-            func4 = str => str;
-            console.log(func4("~~~"));
-        }
-
-        // 11. 함수 유형 : 함수와 매개변수를 이용한 형태
-        {
-
-        }
-
-        // 12. 함수 유형 : 함수와 변수를 이용한 형태
-        {
-
-        }
-
-        // 13. 함수 유형 : 함수와 배열을 이용한 형태
-        {
-
-        }
-
-        // 14. 함수 유형 : 함수와 객체을 이용한 형태
-        {
-
-        }
-
-        // 15. 함수 유형 : 함수와 객체 및 배열을 이용한 형태
-        {
-
-        }
-
-        // 16. 함수 유형 : 객체 안에 함수를 이용한 형태
-        {
-
-        }
-
-        // 17. 함수 유형 : 객체 생성자 함수
-        {
-
-        }
-
-        // 18. 함수 유형 : 프로토타입 함수
-        {
-
-        }
-
-        // 19. 함수 유형 : 객체 리터럴 함수
-        {
-
+            // 호출
+            info1.result1();
+            info2.result2();
         }
     </script>
 </body>
