--- a/webd/layoutA-1.html
+++ b/webd/layoutA-1.html
@@ -26,19 +26,19 @@
         #header .logo {
             width: 20%;
             height: 100px;
-            background-color: #f3e9e9;
+            background-color: #ffecec;
         }
 
         #header .nav {
             width: 80%;
             height: 100px;
-            background-color: #f1d4d4;
+            background-color: #ffe0e0;
         }
 
         #slider {
             width: 1200px;
             height: 300px;
-            background-color: #433224;
+            background-color: #ffd5d5;
         }
 
         #content {
@@ -49,19 +49,19 @@
         #content .content1 {
             width: 33.333%;
             height: 200px;
-            background-color: #124421;
+            background-color: #ffcbcb;
         }
 
         #content .content2 {
             width: 33.333%;
             height: 200px;
-            background-color: #569769;
+            background-color: #ffbbbb;
         }
 
         #content .content3 {
             width: 33.333%;
             height: 200px;
-            background-color: #aeceb8;
+            background-color: #ffa7a7;
         }
 
         #footer {
@@ -72,19 +72,19 @@
         #footer .footer1 {
             width: 20%;
             height: 100px;
-            background-color: rgb(236, 51, 236);
+            background-color: #ff9a9a;
         }
 
         #footer .footer2 {
             width: 60%;
             height: 100px;
-            background-color: rgb(197, 107, 197);
+            background-color: #ff8989;
         }
 
         #footer .footer3 {
             width: 20%;
             height: 100px;
-            background-color: rgb(230, 211, 230);
+            background-color: #ff7a7a;
         }
     </style>
 </head>
