--- a/webd/layoutB-1.html
+++ b/webd/layoutB-1.html
@@ -20,7 +20,7 @@
         #header {
             width: 100%;
             height: 100px;
-            background-color: #f10000;
+            background-color: #bbb;
         }
 
         #header .header-container {
@@ -32,13 +32,13 @@
         #header .header-container .logo {
             width: 20%;
             height: 100px;
-            background-color: #7e6666;
+            background-color: #ffdede;
         }
 
         #header .header-container .nav {
             width: 80%;
             height: 100px;
-            background-color: #b94545;
+            background-color: #ffcbcb;
         }
 
 
@@ -50,7 +50,7 @@
         #slider .slider-container {
             width: 1200px;
             height: 300px;
-            background-color: #bd7575;
+            background-color: #ffb9b9;
             margin: 0 auto;
         }
 
@@ -69,25 +69,25 @@
         #content .content-container .content1 {
             width: 33.3333%;
             height: 200px;
-            background-color: #803232;
+            background-color: #f3a9a9;
         }
 
         #content .content-container .content2 {
             width: 33.3333%;
             height: 200px;
-            background-color: #3d0e0e;
+            background-color: #ffa0a0;
         }
 
         #content .content-container .content3 {
             width: 33.3333%;
             height: 200px;
-            background-color: #c54e4e;
+            background-color: #ff6d6d;
         }
 
         #footer {
             width: 100%;
             height: 100px;
-            background-color: #eba9a9;
+            background-color: #eee;
         }
 
         #footer .footer-container {
@@ -99,7 +99,7 @@
         #footer .footer-container .footer1 {
             width: 20%;
             height: 100px;
-            background-color: #926767;
+            background-color: #ff9c9c;
         }
 
 
@@ -110,13 +110,13 @@
         #footer .footer-container .footer2 .footer2-1 {
             widows: 100%;
             height: 50px;
-            background-color: #815757;
+            background-color: #fd7979;
         }
 
         #footer .footer-container .footer2 .footer2-2 {
             widows: 100%;
             height: 50px;
-            background-color: #111;
+            background-color: #ff5a5a;
         }
     </style>
 </head>
