--- a/webd/layoutC-2.html
+++ b/webd/layoutC-2.html
@@ -80,9 +80,20 @@
 
         #footer .footer-2 {
             width: 30%;
-            height: 50px;
+            height: 100px;
             background-color: #864242;
+        }
 
+        #footer .footer-2 .f-1 {
+            width: 100%;
+            height: 50px;
+            background-color: #c94b4b;
+        }
+
+        #footer .footer-2 .f-2 {
+            width: 100%;
+            height: 50px;
+            background-color: #a02424;
         }
     </style>
 </head>
@@ -102,7 +113,10 @@
             </section>
             <footer id="footer">
                 <div class="footer-1"></div>
-                <div class="footer-2"></div>
+                <div class="footer-2">
+                    <div class="f-1"></div>
+                    <div class="f-2"></div>
+                </div>
             </footer>
         </main>
     </div>
