--- a/webd/layoutD-1.html
+++ b/webd/layoutD-1.html
@@ -17,7 +17,9 @@
             flex-wrap: wrap;
         }
 
-        #aside {}
+        #aside {
+            height: 100%;
+        }
 
         #logo {
             width: 200px;
