--- a/webd/layoutE-4.html
+++ b/webd/layoutE-4.html
@@ -83,15 +83,27 @@
         }
 
         #footer .footer1 {
-            width: 12.2%;
+            width: 11.55%;
             height: 120px;
             background-color: #696666;
         }
 
         #footer .footer2 {
-            width: 67.8%;
-            height: 60px;
+            width: 78%;
+            height: 120px;
             background-color: #574b4b;
+        }
+
+        #footer .footer2 .f-1 {
+            width: 100%;
+            height: 60px;
+            background-color: #aa3a3a;
+        }
+
+        #footer .footer2 .f-2 {
+            width: 100%;
+            height: 60px;
+            background-color: #8d2c2c;
         }
 
         #footer .footer3 {
@@ -126,7 +138,10 @@
         <!--main-->
         <footer id="footer">
             <div class="footer1"></div>
-            <div class="footer2"></div>
+            <div class="footer2">
+                <div class="f-1"></div>
+                <div class="f-2"></div>
+            </div>
             <div class="footer3"></div>
         </footer>
         <!--footer-->
