--- a/webd/layoutF-3.html
+++ b/webd/layoutF-3.html
@@ -112,13 +112,13 @@
         #footer .container .menu .menu-1 {
             width: 100%;
             height: 60px;
-            background-color: #fff;
+            background-color: #caabab;
         }
 
-        #footer .container .menu .menu-1 {
+        #footer .container .menu .menu-2 {
             width: 100%;
             height: 60px;
-            background-color: #412142;
+            background-color: #b186b3;
 
         }
     </style>
