--- a/webd/cate.html
+++ b/webd/cate.html
@@ -23,6 +23,7 @@
             height: 100vh;
             background-color: #f8b1b18a;
             padding: 20px;
+            overflow: auto;
         }
 
         #side h2 {
@@ -157,6 +158,35 @@
                     <li><a href="site-5.html">SITE5</a></li>
                     <li><a href="site-6.html">SITE6</a></li>
                 </ul>
+                <ul>
+                    <li>
+                    <li><a href="pdf/A-1.pdf">A-1</a></li>
+                    <li><a href="pdf/A-2.pdf">A-2</a></li>
+                    <li><a href="pdf/A-3.pdf">A-3</a></li>
+                    <li><a href="pdf/A-4.pdf">A-4</a></li>
+                    <li><a href="pdf/B-1.pdf">B-1</a></li>
+                    <li><a href="pdf/B-2.pdf">B-2</a></li>
+                    <li><a href="pdf/B-3.pdf">B-3</a></li>
+                    <li><a href="pdf/B-4.pdf">B-4</a></li>
+                    <li><a href="pdf/C-1.pdf">C-1</a></li>
+                    <li><a href="pdf/C-2.pdf">C-2</a></li>
+                    <li><a href="pdf/C-3.pdf">C-3</a></li>
+                    <li><a href="pdf/C-4.pdf">C-4</a></li>
+                    <li><a href="pdf/D-1.pdf">D-1</a></li>
+                    <li><a href="pdf/D-2.pdf">D-2</a></li>
+                    <li><a href="pdf/D-3.pdf">D-3</a></li>
+                    <li><a href="pdf/D-4.pdf">D-4</a></li>
+                    <li><a href="pdf/E-1.pdf">E-1</a></li>
+                    <li><a href="pdf/E-2.pdf">E-2</a></li>
+                    <li><a href="pdf/E-3.pdf">E-3</a></li>
+                    <li><a href="pdf/E-4.pdf">E-4</a></li>
+                    <li><a href="pdf/F-1.pdf">F-1</a></li>
+                    <li><a href="pdf/F-2.pdf">F-2</a></li>
+                    <li><a href="pdf/F-3.pdf">F-3</a></li>
+                    <li><a href="pdf/F-4.pdf">F-4</a></li>
+                    </li>
+                </ul>
+
 
             </nav>
         </aside>
