--- a/webd/layoutC-1.html
+++ b/webd/layoutC-1.html
@@ -80,6 +80,18 @@
 
         #footer .footer-2 {
             width: 70%;
+            height: 100px;
+            background-color: #864242;
+        }
+
+        #footer .footer-2 .f-1 {
+            width: 100%;
+            height: 50px;
+            background-color: #fa0606;
+        }
+
+        #footer .footer-2 .f-2 {
+            width: 100%;
             height: 50px;
             background-color: #864242;
         }
@@ -101,7 +113,10 @@
             </section>
             <footer id="footer">
                 <div class="footer-1"></div>
-                <div class="footer-2"></div>
+                <div class="footer-2">
+                    <div class="f-1"></div>
+                    <div class="f-2"></div>
+                </div>
             </footer>
 
         </main>
