--- a/webd/layoutC-3.html
+++ b/webd/layoutC-3.html
@@ -48,19 +48,19 @@
         }
 
         #contents .content-1 {
-            width: 33%;
+            width: 33.3333%;
             height: 200px;
             background-color: #461414;
         }
 
         #contents .content-2 {
-            width: 33%;
+            width: 33.3333%;
             height: 200px;
             background-color: #723e3e;
         }
 
-        #contents content-3 {
-            width: 33%;
+        #contents .content-3 {
+            width: 33.3333%;
             height: 200px;
             background-color: #b12525;
         }
@@ -83,6 +83,18 @@
             height: 50px;
             background-color: #864242;
         }
+
+        #footer .footer-2 .f-1 {
+            width: 100%;
+            height: 50px;
+            background-color: #887373;
+        }
+
+        #footer .footer-2 .f-2 {
+            width: 100%;
+            height: 50px;
+            background-color: #c72e2e;
+        }
     </style>
 </head>
 
@@ -101,8 +113,10 @@
             </section>
             <footer id="footer">
                 <div class="footer-1"></div>
-                <div class="footer-2"></div>
-                <div class="footer-3"></div>
+                <div class="footer-2">
+                    <div class="f-1"></div>
+                    <div class="f-2"></div>
+                </div>
             </footer>
 
         </main>
