--- a/webd/layoutE-1.html
+++ b/webd/layoutE-1.html
@@ -83,15 +83,27 @@
         }
 
         #footer .footer1 {
-            width: 12.2%;
+            width: 11.8%;
             height: 120px;
             background-color: #696666;
         }
 
         #footer .footer2 {
-            width: 87.8%;
-            height: 60px;
+            width: 100%;
+            height: 120px;
             background-color: #705757;
+        }
+
+        #footer .footer2 .f-1 {
+            width: 100%;
+            height: 60px;
+            background-color: #aa3f3f;
+        }
+
+        #footer .footer2 .f-2 {
+            width: 100%;
+            height: 60px;
+            background-color: #442121;
         }
     </style>
 </head>
@@ -120,7 +132,10 @@
         <!--main-->
         <footer id="footer">
             <div class="footer1"></div>
-            <div class="footer2"></div>
+            <div class="footer2">
+                <div class="f-1"></div>
+                <div class="f-2"></div>
+            </div>
         </footer>
         <!--footer-->
     </div>
