--- a/webd/layoutF-1.html
+++ b/webd/layoutF-1.html
@@ -112,10 +112,10 @@
         #footer .container .menu .menu-1 {
             width: 100%;
             height: 60px;
-            background-color: #fff;
+            background-color: #a74a4a;
         }
 
-        #footer .container .menu .menu-1 {
+        #footer .container .menu .menu-2 {
             width: 100%;
             height: 60px;
             background-color: #412142;
