--- a/webd/layoutF-2.html
+++ b/webd/layoutF-2.html
@@ -128,10 +128,10 @@
         #footer .container .menu .menu-1 {
             width: 100%;
             height: 60px;
-            background-color: #fff;
+            background-color: #6d3434;
         }
 
-        #footer .container .menu .menu-1 {
+        #footer .container .menu .menu-2 {
             width: 100%;
             height: 60px;
             background-color: #412142;
