--- a/webd/layoutD-1.html
+++ b/webd/layoutD-1.html
@@ -17,9 +17,7 @@
             flex-wrap: wrap;
         }
 
-        #aside {
-            height: 100%;
-        }
+        #aside {}
 
         #logo {
             width: 200px;
