--- a/Javascript/javascript01.html
+++ b/Javascript/javascript01.html
@@ -1110,6 +1110,17 @@ undefined: 값이 할당되지 않음을 나타냅니다.
 
             console.log(jsonString);     //{"name":"Nam","age":30}
         }
+        {
+            const obj = {
+                a: 100,
+                b: 200,
+                c: "javascript"
+            }
+            console.log(Object.keys(obj));
+            console.log(Object.values(obj));
+            console.log(Object.entries(obj));
+
+        }
     </script>
 </body>
 
