--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </a>
         </div>
         <div class="draggableIcon icon">
-            <a href="https://github.com/skadbstj12/" target="_blank">
+            <a href="https://github.com/skadbstj12" target="_blank">
                 <img src="assets/img/icon-githup.png" alt="Githup">
                 <span>Githup</span>
             </a>
