--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
         <div class="draggableIcon icon">
             <a href="https://github.com/skadbstj12" target="_blank">
-                <img src="assets/img/icon-githup.png" alt="Githup">
+                <img src="assets/img/icon-github.png" alt="Githup">
                 <span>Githup</span>
             </a>
         </div>
