--- a/index.html
+++ b/index.html
@@ -51,6 +51,12 @@
                 <span>Githup</span>
             </a>
         </div>
+        <div class="draggableIcon icon">
+            <a href="https://skadbstj12.github.io/" target="_blank">
+                <img src="assets/img/blogicon.png" alt="Blog" style="border-radius: 0;">
+                <span>Blog</span>
+            </a>
+        </div>
     </div>
     <!-- //main__icons -->
 
