--- a/Javascript/javascript04.html
+++ b/Javascript/javascript04.html
@@ -53,166 +53,458 @@
         <!-- //main__menu container -->
         <div class="main__sample container">
             <div id="sample01" class="sample">
-                <h3>01. 변수 : 데이터 저장</h3>
+                <h3>01. 변수 : if문</h3>
                 <p>
-
+                    if문은 프로그래밍에서 조건문을 처리하는 데 사용됩니다. 일반적으로 조건을 평가하여 결과가 참(True)이면 특정한 코드 블록이 실행됩니다. 조건이 거짓(False)이면 해당 코드
+                    블록은 건너뛰고, 프로그램의 흐름은 다음 문장으로 이동합니다. if문은 단독으로 사용될 수 있으며, 필요에 따라 else나 elif(else if의 축약형)문과 함께 사용하여 여러
+                    조건을 처리할 수 있습니다. 이를 통해 프로그램은 다양한 조건에 따라 다른 동작을 수행할 수 있습니다.
                 </p>
-                <pre><code></code></pre>
+                <pre><code>{
+//true, "문자열", 숫자, ,"1", "2", [배열], {객체}
+//false. ""(빈문자열), 0, null, undefined
+
+if (0) {
+console.log("실행되었습니다. (true)");
+} else {    
+console.log("실행되었습니다. (false)");
+}
+}</code></pre>
                 <div class="reuslt">
                     <details>
                         <summary>결과 확인하기</summary>
                         <div>
-                            100<br />
-                            200<br />
-                            javascript
+                            실행되었습니다. (false)
                         </div>
                     </details>
                 </div>
             </div>
-        </div>
-        <!-- sample01 -->
+            <!-- sample01 -->
+            <div id="sample02" class="sample">
+                <h3>02. 다중 if문</h3>
+                <p>
+                    다중 if문은 프로그래밍에서 하나 이상의 조건을 검사하는 제어 구조입니다. 첫 번째 if문이 거짓(False)인 경우 다음 if문이 실행됩니다. 이런 식으로 여러 개의 if문이
+                    중첩될 수
+                    있습니다. 다중 if문은 프로그램이 여러 가지 조건에 따라 다른 동작을 취하도록 할 때 사용됩니다. 종종 else if문(또는 축약형으로 elif문)과 함께 사용하여 여러 조건을
+                    처리합니다. 이를 통해 프로그램은 다양한 경우에 대응하여 유연하게 동작할 수 있습니다.
+                </p>
+                <pre><code>{
+const num = 100;
 
-        <script src="assets/js/highlight.min.js"></script>
-        <script>hljs.highlightAll();</script>
-        <script>
-            //"01. if문"
-            {
-                //true "문자열", 1, 2, "1", "2", [], {}
-                //false. ""(빈문자열), 0, null, undefined
+if (num == 90) {
+console.log("실행되었습니다. (90)");
+} else if (num == 100) {
+console.log("실행되었습니다. (100)");
+} else if (num == 110) {
+console.log("실행되었습니다. (110)");
+} else if (num == 120) {
+console.log("실행되었습니다. (120)");
+} else if (num == 130) {
+console.log("실행되었습니다. (130)");
+} else {
+console.log("실행되었습니다.");
+}
+}</code></pre>
+                <div class="reuslt">
+                    <details>
+                        <summary>결과 확인하기</summary>
+                        <div>
+                            실행되었습니다. (100)
+                        </div>
+                    </details>
+                </div>
+            </div>
+            <!-- sample02 -->
+            <div id="sample03" class="sample">
+                <h3>03. 중첩 if문 (회원가입)</h3>
+                <p>
+                    중첩 if문은 하나의 if문 안에 다른 if문을 포함하는 구조입니다. 이것은 조건에 따라 더 복잡한 흐름을 제어하는 데 사용됩니다. 즉, if문 안에 또 다른 if문이 들어가는
+                    것을 의미합니다. 중첩 if문을 사용하면 여러 조건을 조합하여 더 정확한 조건을 만족하는 경우에만 특정 코드 블록을 실행할 수 있습니다. 이를 통해 프로그램은 더 세부적인 조건에
+                    따라 다양한 동작을 수행할 수 있습니다.
+                </p>
+                <pre><code>{
+const num = 100;
 
-                if (1) {
-                    console.log("실행되었습니다.(true)");
-                } else {
-                    console.log("실행되었습니다.(false)");
+if (num == 100) {
+console.log("실행되었습니다. 1")
+if (num == 100) {
+console.log("실행되었습니다. 2")
+if (num == 100) {
+console.log("실행되었습니다. 3")
+}
+}
+} else {
+console.log("실행되었습니다. 4")
+}
+}</code></pre>
+                <div class="reuslt">
+                    <details>
+                        <summary>결과 확인하기</summary>
+                        <div>
+                            실행되었습니다. 1
+                            실행되었습니다. 2
+                            실행되었습니다. 3
+                        </div>
+                    </details>
+                </div>
+            </div>
+            <!-- sample03 -->
+            <div id="sample04" class="sample">
+                <h3>04. if문 생략 & 삼향 연산자</h3>
+                <p>
+                    삼항 연산자는 조건문에 기반하여 두 가지 값 중 하나를 선택하여 반환하는 연산자입니다. 조건이 참(True)이면 첫 번째 값이 반환되고, 거짓(False)이면 두 번째 값이
+                    반환됩니다. 이를 통해 if-else 문을 간결하게 표현할 수 있습니다.
+                </p>
+                <pre><code>{
+const num = 100;
+
+if (num == 100) {
+console.log("true");
+}
+
+// 생략
+if (num == 100) console.log("true")
+
+if (num == 100) {
+console.log("true");
+} else {
+console.log("false");
+}
+
+// 삼향 연산자 (조건식 연산자)
+num == 100 ? console.log("true") : console.log("false");
+}</code></pre>
+                <div class="reuslt">
+                    <details>
+                        <summary>결과 확인하기</summary>
+                        <div>
+                            true
+                        </div>
+                    </details>
+                </div>
+            </div>
+            <!-- sample04 -->
+            <div id="sample05" class="sample">
+                <h3>05. switch문</h3>
+                <p>
+                    `switch`문은 프로그래밍에서 하나의 변수를 여러 가지 경우에 따라 다르게 처리하는 제어 구조입니다. 주어진 변수의 값을 확인하고, 각 경우(case)에 따라 해당하는 코드
+                    블록을 실행합니다. 이를 통해 여러 조건을 간결하게 처리할 수 있습니다. 대부분의 프로그래밍 언어에서 지원되지만, 일부 언어에서는 지원되지 않을 수도 있습니다.
+                </p>
+                <pre><code>{
+const num = 100;
+
+switch (num) {
+case 90:
+console.log("실행되었습니다. (90)");
+break;
+case 95:
+console.log("실행되었습니다. (95)");
+break;
+case 100:
+console.log("실행되었습니다. (100)");
+break;
+case 105:
+console.log("실행되었습니다. (105)");
+break;
+default:
+console.log("실행되었습니다.");
+}
+}</code></pre>
+                <div class="reuslt">
+                    <details>
+                        <summary>결과 확인하기</summary>
+                        <div>
+                            실행되었습니다. 100
+                        </div>
+                    </details>
+                </div>
+            </div>
+            <!-- sample05 -->
+            <div id="sample06" class="sample">
+                <h3>06. while문</h3>
+                <p>
+                    while문은 프로그래밍에서 반복적으로 코드 블록을 실행하는 제어 구조 중 하나입니다. 주어진 조건이 참(True)인 동안 코드를 반복해서 실행합니다. 조건이 거짓(False)이
+                    될때까지 반복이 계속됩니다. 이를 통해 반복 작업을 간단하게 처리할 수 있습니다. 종종 반복 횟수가 정해지지 않은 경우에 사용됩니다.
+                </p>
+                <pre><code>{
+let num = 1;            // 초깃값
+while (num <= 10) {     // 조건식;
+console.log(num);   // 실행문
+num++;  // 증감값;
+}
+}</code></pre>
+                <div class="reuslt">
+                    <details>
+                        <summary>결과 확인하기</summary>
+                        <div>
+                            실행되었습니다. 100
+                        </div>
+                    </details>
+                </div>
+            </div>
+            <!-- sample06 -->
+            <div id="sample07" class="sample">
+                <h3>07. do while문</h3>
+                <p>
+                    `do-while`문은 프로그래밍에서 반복적으로 코드 블록을 실행하는 제어 구조 중 하나입니다. `do-while`문은 `while`문과 유사하지만, 코드 블록을 실행한 후 조건을
+                    검사합니다. 따라서 최소한 한 번은 코드 블록이 실행됩니다. 조건이 참(True)인 경우 코드 블록을 계속해서 반복 실행하고, 조건이 거짓(False)이 되면 반복을 멈춥니다.
+                    이를 통해 일단 코드를 실행한 후에 조건을 검사할 수 있습니다. 일부 프로그래밍 언어에서는 `do-while`문을 지원하지 않을 수도 있습니다.
+                </p>
+                <pre><code>{
+let num = 1;    // 초깃값;
+
+do {
+console.log(num);   //  실행문
+num++;              // 증감값;
+} while (num <= 10);     // 조건식
+}</code></pre>
+                <div class="reuslt">
+                    <details>
+                        <summary>결과 확인하기</summary>
+                        <div>
+                            1~10
+                        </div>
+                    </details>
+                </div>
+            </div>
+            <!-- sample07 -->
+            <div id="sample08" class="sample">
+                <h3>08. for문</h3>
+                <p>
+                    `for`문은 프로그래밍에서 반복 작업을 수행하는 제어 구조 중 하나입니다. 주로 리스트나 배열과 같은 데이터 구조를 순회하거나, 일정 횟수만큼 반복하는 경우에 사용됩니다.
+                    `for`문은 초기화, 조건 검사, 반복 후 처리의 세 부분으로 구성되어 있습니다. 초기화 부분에서는 반복에 필요한 변수를 설정하고, 조건 검사 부분에서는 반복을 계속할 조건을
+                    검사합니다. 반복 후 처리 부분에서는 각 반복이 끝난 후 실행할 코드를 지정합니다. 이를 통해 반복 작업을 효율적으로 처리할 수 있습니다.
+                </p>
+                <pre><code>{
+for (let i = 1; i <= 10; i++) {     // 초깃값; 조건식; 증감값;
+console.log(i);                 // 실행문
+}
+}</code></pre>
+                <div class="reuslt">
+                    <details>
+                        <summary>결과 확인하기</summary>
+                        <div>
+                            1~10
+                        </div>
+                    </details>
+                </div>
+            </div>
+            <!-- sample08 -->
+            <div id="sample09" class="sample">
+                <h3>09. 중첩 for문</h3>
+                <p>
+                    중첩 `for`문은 하나의 `for`루프 내부에 다른 `for`루프가 있는 구조를 의미합니다. 이는 외부 루프와 내부 루프가 서로 연계하여 반복 작업을 수행하는 것을 가능하게
+                    합니다. 중첩 `for`문은 이차원 배열이나 행렬과 같은 다차원 데이터 구조를 탐색하거나 처리할 때 유용하게 사용됩니다. 내부 `for`루프는 외부 `for`루프의 한 번의
+                    반복마다 전체 반복을 수행하므로, 외부 루프의 반복마다 내부 루프의 모든 반복이 실행됩니다. 이를 통해 다양한 복잡한 작업을 수행할 수 있습니다.
+                </p>
+                <pre><code>{
+for (let i = 1; i <= 10; i++) {
+for (let j = 1; j <= 10; j++) {
+console.log(i, j);
+}
+}
+}</code></pre>
+                <div class="reuslt">
+                    <details>
+                        <summary>결과 확인하기</summary>
+                        <div>
+                            1,1 ~ 10,10;
+                        </div>
+                    </details>
+                </div>
+            </div>
+            <!-- sample09 -->
+            <div id="sample10" class="sample">
+                <h3>10. break문</h3>
+                <p>
+                    `break`문은 반복문(예: `for` 루프나 `while` 루프)을 중단하고 루프를 즉시 탈출하는 데 사용됩니다. `break`문이 실행되면 루프의 실행이 즉시 중지되고,
+                    루프를 빠져나가게 됩니다. 이는 특정 조건이 충족되었을 때 반복을 종료하고자 할 때 유용하게 사용됩니다. 종종 `if`문과 함께 사용하여 특정 조건이 충족되면 루프를 탈출하는
+                    용도로 활용됩니다.
+                </p>
+                <pre><code>{
+for (let i = 1; i <= 10; i++) {
+if (i == 5) {
+break;
+}
+console.log(i)
+}
+}</code></pre>
+                <div class="reuslt">
+                    <details>
+                        <summary>결과 확인하기</summary>
+                        <div>
+                            1,1 ~ 10,10;
+                        </div>
+                    </details>
+                </div>
+            </div>
+            <!-- sample10 -->
+            <div id="sample11" class="sample">
+                <h3>11. continue문</h3>
+                <p>
+                    `continue`문은 반복문(예: `for` 루프나 `while` 루프)에서 사용되며, 현재 반복을 중지하고 다음 반복으로 넘어가는 데 사용됩니다. `continue`문이
+                    실행되면 현재 반복의 남은 코드는 실행되지 않고, 다음 반복이 시작됩니다. 이는 특정 조건이 충족되었을 때 현재 반복을 건너뛰고자 할 때 유용하게 사용됩니다. 종종 `if`문과
+                    함께 사용하여 특정 조건이 충족되면 현재 반복을 건너뛰는 용도로 활용됩니다.
+                </p>
+                <pre><code>{
+for (let i = 1; i <= 10; i++) {
+if (i == 5) {
+continue;
+}
+console.log(i)
+}
+}</code></pre>
+                <div class="reuslt">
+                    <details>
+                        <summary>결과 확인하기</summary>
+                        <div>
+                            1,2,3,4,6,7,8,9,10
+                        </div>
+                    </details>
+                </div>
+            </div>
+            <!-- sample11 -->
+
+            <script src="assets/js/highlight.min.js"></script>
+            <script>hljs.highlightAll();</script>
+            <script>
+                //"01. if문"
+                {
+                    //true "문자열", 1, 2, "1", "2", [], {}
+                    //false. ""(빈문자열), 0, null, undefined
+
+                    if (1) {
+                        console.log("실행되었습니다.(true)");
+                    } else {
+                        console.log("실행되었습니다.(false)");
+                    }
                 }
-            }
-            //"02. 다중 if문"
-            {
-                const num = 100;
+                //"02. 다중 if문"
+                {
+                    const num = 100;
 
-                if (num == 90) {
-                    console.log("실행되었습니다.(90)");
-                } else if (num == 100) {
-                    console.log("실행되었습니다.(100)");
-                } else if (num == 110) {
-                    console.log("실행되었습니다.(110)");
-                } else if (num == 120) {
-                    console.log("실행되었습니다.(120)");
-                } else if (num == 130) {
-                    console.log("실행되었습니다.(130)");
-                } else {
-                    console.log("실행되었습니다.");
+                    if (num == 90) {
+                        console.log("실행되었습니다.(90)");
+                    } else if (num == 100) {
+                        console.log("실행되었습니다.(100)");
+                    } else if (num == 110) {
+                        console.log("실행되었습니다.(110)");
+                    } else if (num == 120) {
+                        console.log("실행되었습니다.(120)");
+                    } else if (num == 130) {
+                        console.log("실행되었습니다.(130)");
+                    } else {
+                        console.log("실행되었습니다.");
+                    }
                 }
-            }
-            //"03. 중첩 if문"
-            {
-                const num = 100;
+                //"03. 중첩 if문"
+                {
+                    const num = 100;
 
-                if (num == 100) {
-                    console.log("실행되었습니다.1");
                     if (num == 100) {
-                        console.log("실행되었습니다.2");
+                        console.log("실행되었습니다.1");
                         if (num == 100) {
-                            console.log("실행되었습니다.3")
+                            console.log("실행되었습니다.2");
+                            if (num == 100) {
+                                console.log("실행되었습니다.3")
 
+                            }
+                        }
+                    } else {
+                        console.log("실행되었습니다.")
+                    }
+                }
+                //"04. if문 생략 & 삼항 연산자"
+                {
+                    const num = 100;
+
+                    if (num == 100) {
+                        console.log("true");
+                    }
+                    //생략
+                    if (num == 100) console.log("true")
+
+                    if (num == 100) {
+                        console.log("true");
+                    } else {
+                        console.log("false");
+                    }
+
+                    //삼항 연산자
+
+
+                }
+                //"05. switch문"
+                {
+                    const num = 100;
+
+                    switch (num) {
+                        case 90:
+                            console.log("실행되었습니다.(90)")
+                            break;
+                        case 95:
+                            console.log("실행되었습니다.(95)")
+                            break;
+                        case 100:
+                            console.log("실행되었습니다.(100)")
+                            break;
+                        case 105:
+                            console.log("실행되었습니다.(105)")
+                            break;
+                        default:
+                            console.log("실행되었습니다.")
+                    }
+                }
+                //"06. while문"
+                {
+                    let num = 1;    //초깃값;
+
+                    while (num <= 10) { // 조건식;
+                        console.log(num);   //실행문
+                        num++;  //증감값;
+                    }
+                }
+                //"07. do while문"
+                {
+                    let num = 1; // 초깃값;
+
+                    do {
+                        console.log(num);    //실행문
+                        num++;          //증감값
+                    } while (num <= 10);      //조건식
+                }
+                //"08. for문"
+                {
+                    for (let i = 1; i <= 10; i++) {     //초깃값; 조건식; 증감값;
+                        console.log(i);     //실행문
+                    }
+                }
+                //"09. 중첩 for문"
+                {
+                    for (let i = 1; i <= 10; i++) {
+                        for (let j = 1; j <= 10; j++) {
+                            console.log(i, j);
                         }
                     }
-                } else {
-                    console.log("실행되었습니다.")
                 }
-            }
-            //"04. if문 생략 & 삼항 연산자"
-            {
-                const num = 100;
-
-                if (num == 100) {
-                    console.log("true");
-                }
-                //생략
-                if (num == 100) console.log("true")
-
-                if (num == 100) {
-                    console.log("true");
-                } else {
-                    console.log("false");
-                }
-
-                //삼항 연산자
-
-
-            }
-            //"05. switch문"
-            {
-                const num = 100;
-
-                switch (num) {
-                    case 90:
-                        console.log("실행되었습니다.(90)")
-                        break;
-                    case 95:
-                        console.log("실행되었습니다.(95)")
-                        break;
-                    case 100:
-                        console.log("실행되었습니다.(100)")
-                        break;
-                    case 105:
-                        console.log("실행되었습니다.(105)")
-                        break;
-                    default:
-                        console.log("실행되었습니다.")
-                }
-            }
-            //"06. while문"
-            {
-                let num = 1;    //초깃값;
-
-                while (num <= 10) { // 조건식;
-                    console.log(num);   //실행문
-                    num++;  //증감값;
-                }
-            }
-            //"07. do while문"
-            {
-                let num = 1; // 초깃값;
-
-                do {
-                    console.log(num);    //실행문
-                    num++;          //증감값
-                } while (num <= 10);      //조건식
-            }
-            //"08. for문"
-            {
-                for (let i = 1; i <= 10; i++) {     //초깃값; 조건식; 증감값;
-                    console.log(i);     //실행문
-                }
-            }
-            //"09. 중첩 for문"
-            {
-                for (let i = 1; i <= 10; i++) {
-                    for (let j = 1; j <= 10; j++) {
-                        console.log(i, j);
+                //"10. break문"
+                {
+                    for (let i = 1; i <= 10; i++) {
+                        if (i == 5) {
+                            break;
+                        }
+                        console.log(i)
                     }
                 }
-            }
-            //"10. break문"
-            {
-                for (let i = 1; i <= 10; i++) {
-                    if (i == 5) {
-                        break;
+                //"11. continue문"
+                {
+                    for (let i = 1; i <= 10; i++) {
+                        if (i == 5) {
+                            continue;
+                        }
+                        console.log(i)
                     }
-                    console.log(i)
                 }
-            }
-            //"11. continue문"
-            {
-                for (let i = 1; i <= 10; i++) {
-                    if (i == 5) {
-                        continue;
-                    }
-                    console.log(i)
-                }
-            }
-        </script>
+            </script>
 </body>
 
 </html>
