--- a/index.html
+++ b/index.html
@@ -57,6 +57,12 @@
                 <span>Blog</span>
             </a>
         </div>
+        <div class="draggableIcon icon">
+            <a href="effect/index.html" target="_blank">
+                <img src="assets/img/Effect.png" alt="Effect" style="border-radius: 0;">
+                <span>Blog</span>
+            </a>
+        </div>
     </div>
     <!-- //main__icons -->
 
