--- a/quiz/c-quiz01.html
+++ b/quiz/c-quiz01.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>퀴즈 05</title>
+    <title>mission</title>
     <link rel="stylesheet" href="assets/css/quiz.css">
 
 
@@ -21,9 +21,9 @@
                 <li><a href="quiz02.html">2</a></li>
                 <li><a href="quiz03.html">3</a></li>
                 <li><a href="quiz04.html">4</a></li>
-                <li class="active"><a href="quiz05.html">5</a></li>
+                <li><a href="quiz05.html">5</a></li>
                 <li><a href="quiz06.html">6</a></li>
-                <li><a href="c-quiz01.html">m</a></li>
+                <li class="active"><a href="c-quiz01.html">m</a></li>
             </ul>
         </nav>
     </header>
