--- a/quiz/quiz04.html
+++ b/quiz/quiz04.html
@@ -23,6 +23,7 @@
                 <li class="active"><a href="quiz04.html">4</a></li>
                 <li><a href="quiz05.html">5</a></li>
                 <li><a href="quiz06.html">6</a></li>
+                <li><a href="c-quiz01.html">m</a></li>
             </ul>
         </nav>
     </header>
