--- a/quiz/quiz06.html
+++ b/quiz/quiz06.html
@@ -21,6 +21,7 @@
                 <li><a href="quiz04.html">4</a></li>
                 <li><a href="quiz05.html">5</a></li>
                 <li class="active"><a href="quiz06.html">6</a></li>
+                <li><a href="c-quiz01.html">M</a></li>
             </ul>
         </nav>
     </header>
@@ -31,7 +32,7 @@
     </main>
     <!-- //main -->
     <footer id="footer">
-        <a href="mailto:kingsongsm97@gmail.com">kingsongsm97@gmail.com</a>
+        <a href="mailto:nys060121@naver.com">nys060121@naver.com</a>
     </footer>
     <!-- //footer -->
     <script>
@@ -46,7 +47,7 @@
 
         // 문제 가져오기
         const fetchQuiz = () => {
-            fetch("https://kingsong97.github.io/class2024/json/gineungsaJC2005_02.json")
+            fetch("https://skadbstj12.github.io/class2024/json/gineungsaJC2005_02.json")
                 .then(res => res.json())
                 .then(items => {
                     console.log(items);
