--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div class="draggableIcon icon">
             <a href="effect/index.html" target="_blank">
                 <img src="assets/img/Effect.png" alt="Effect" style="border-radius: 0;">
-                <span>Blog</span>
+                <span>Effect</span>
             </a>
         </div>
     </div>
